[metadata]
name = grad-cam
version = 1.0.0
author = Jacob Gildenblat
author_email = jacob.gildenblat@gmail.com
description = Grad-CAM visualization tool for PyTorch models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacobgil/pytorch-grad-cam
project_urls =
    Bug Tracker = https://github.com/jacobgil/pytorch-grad-cam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
