[metadata]
name = grad-cam
version = 1.1.0
author = Jacob Gildenblat
author_email = jacob.gildenblat@gmail.com
description = Many Class Activation Map methods implemented in Pytorch. Including Grad-CAM, Grad-CAM++, Score-CAM, Ablation-CAM and XGrad-CAM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacobgil/pytorch-grad-cam
project_urls =
    Bug Tracker = https://github.com/jacobgil/pytorch-grad-cam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6